--- a/wazuh-ingress/ingress-nginx/wazuh-dashboard-ingress.yaml
+++ b/wazuh-ingress/ingress-nginx/wazuh-dashboard-ingress.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: wazuh-test-lb-8f4588f93f3f6179.elb.ap-south-1.amazonaws.com  # Replace with your actual domain
+    - host: ${NLB_DNS}
       http:
         paths:
           - path: /
