--- a/wazuh-ingress/ingress-nginx/wazuh-dashboard-ingress.yaml
+++ b/wazuh-ingress/ingress-nginx/wazuh-dashboard-ingress.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: ${NLB_DNS}
+    - host: ${nlb_dns}
       http:
         paths:
           - path: /
