--- a/wazuh-kubernetes/envs/eks/storage-class.yaml
+++ b/wazuh-kubernetes/envs/eks/storage-class.yaml
@@ -13,7 +13,7 @@ metadata:
   name: wazuh-storage
 provisioner: ebs.csi.aws.com
 parameters:
-  kmsKeyId: "${KMS_KEY_ARN}"
+  kmsKeyId: "${kms_key_arn}"
   encrypted: 'true'
   type: gp2
 volumeBindingMode: WaitForFirstConsumer
