--- a/wazuh-ingress/ingress-nginx/nginx-ingress-loadbalancer.yaml
+++ b/wazuh-ingress/ingress-nginx/nginx-ingress-loadbalancer.yaml
@@ -7,6 +7,7 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Use NLB (Network LoadBalancer)
     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "<your-arn-of-ssl-cert>" # AWS ACM certificate ARN
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https" # Enable SSL termination for HTTPS
+    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip" 
 spec:
   selector:
     app.kubernetes.io/name: ingress-nginx
