--- a/wazuh-kubernetes/wazuh/wazuh_managers/wazuh-master-sts.yaml
+++ b/wazuh-kubernetes/wazuh/wazuh_managers/wazuh-master-sts.yaml
@@ -40,6 +40,8 @@ spec:
       securityContext:
         fsGroup: 101
       serviceAccountName: wazuh-manager-sa
+      nodeSelector:
+        role: wazuh-master-node
       containers:
         - name: wazuh-manager
           image: 'wazuh/wazuh-manager:4.11.2'
