--- a/wazuh-kubernetes/envs/eks/kustomization.yml
+++ b/wazuh-kubernetes/envs/eks/kustomization.yml
@@ -1,22 +1,16 @@
-# Copyright (C) 2019, Wazuh Inc.
-#
-# This program is a free software; you can redistribute it
-# and/or modify it under the terms of the GNU General Public
-# License (version 2) as published by the FSF - Free Software
-# Foundation.
-
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+ 
+namespace: wazuh  # 👈 Add this line
+ 
 resources:
 - manager_serviceaccount.yaml
 - ../../wazuh
+ 
 patches:
 - path: storage-class.yaml
 - path: indexer-resources.yaml
 - path: dashboard-resources.yaml
 - path: wazuh-master-resources.yaml
 - path: wazuh-worker-resources.yaml
-#- path: patch-master-svc-nlb.yaml
-#- path: patch-worker-svc-nlb.yaml
-#- path: patch-dashboard-svc-nlb.yaml
  
